--- a/coupan.html
+++ b/coupan.html
@@ -51,7 +51,7 @@ body {
   </head>
   <body>
     <div class="container">
-        <!-- <img src="C:\Users\hp\Downloads\coupan.png"   alt="image not found"> -->
+        <img src="coupan.png"   alt="image not found">
         <img src="https://photos.google.com/share/AF1QipMF8aPOGcSY5keVOldLGzwylSPiulNCxbvMqDi236EVDiKS4Sdc-U4Rj4HYhaK5Yw/photo/AF1QipOoGrVISJFqrsh7vysIbXw0sqhfbAm4ISh7ERTC?key=RWR0cDV0QlV3TjMxSkNzMG1XNHljaGF2UGRpcG5n" alt="image not found">
       <canvas id="scratch"></canvas>
     </div>
